--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -22,7 +22,39 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+:root {
+  --default: #101010;
+  --white: #f5f5f5;
+  --backgroundLighten: lighten(--baseColor, 10%);
+  --gradient: linear-gradient(#df56ad 0%, #0d1023 96.23%, #702b57 100%);
+  --border: #707070;
+  --text-color: #ffffff;
+  --sec-color: #df56ad;
+  --default-border: #707070;
 
+  --default-dark-color: #0d1023;
+  --default-pink: #df56ad;
+  --default-white: #f1f1f1;
+  --default-red: #f62b2b;
+  --default-green: #39b545;
+  --default-yellow: #fdca00;
+  --light-bg: #0d1023;
+  --light-text: #fff;
+
+  --default-content-color: #7714f1;
+  /* default for mail and documentation items*/
+  --primary: #00cfe8;
+  --secondary: #707070;
+  --tertiary: #7714f1;
+  --warning: #fdca00;
+  --danger: #f62b2b;
+  --success: #39b545;
+  --light: #f1f1f1;
+  --background: #020514;
+  --dark: var(--background);
+  --foreground: rgba(255, 255, 255, 0.08);
+  --text: #ccced2
+}
 h1,
 h2,
 h3,
@@ -41,6 +73,9 @@ a {
   font-family: 'Mulish', sans-serif;
 }
 
+input,button{
+  font-size: 16px;
+}
 .view {
   padding: 0 20px;
 }
