--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,4 +1,3 @@
-
 *,
 *::before,
 *::after {
@@ -22,6 +21,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 :root {
   --default: #101010;
   --white: #f5f5f5;
@@ -31,7 +31,7 @@ body {
   --text-color: #ffffff;
   --sec-color: #df56ad;
   --default-border: #707070;
-
+  --border-color: #ccc;
   --default-dark-color: #0d1023;
   --default-pink: #df56ad;
   --default-white: #f1f1f1;
@@ -55,13 +55,14 @@ body {
   --foreground: rgba(255, 255, 255, 0.08);
   --text: #ccced2
 }
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  font-family: 'Bakbak One', cursive;
+  font-family: 'Open Sans', sans-serif;
 }
 
 div,
@@ -70,12 +71,14 @@ p {
 }
 
 a {
-  font-family: 'Mulish', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
-input,button{
+input,
+button {
   font-size: 16px;
 }
+
 .view {
   padding: 0 20px;
 }
