--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -106,3 +106,11 @@ svg {
   height: 24px;
   /* fill: #000; */
 }
+
+/* .show__mobile_menu{ */
+  /* display: block; */
+/* } */
+/*  */
+/* .hide__mobile_menu{ */
+  /* display: none; */
+/* } */
