--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -52,8 +52,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Open Sans', sans-serif;
-  /* font-family: 'Bakbak One', cursive; */
+  /* font-family: 'Open Sans', sans-serif; */
+  font-family: 'Bakbak One', cursive;
 }
 
 div,
