--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -107,6 +107,13 @@ button {
   color: var(--primary);
 }
 
+.error{
+  color: var(--default-red);
+  display: block;
+  font-size: 12px;
+  /* text-align: ; */
+  margin-bottom: 1.2rem;
+}
 svg {
   width: 24px;
   height: 24px;
