--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -81,13 +81,12 @@ button {
   }
 
   .d-sm-none {
-    display: unset;
+    display: none;
   }
 }
 
 
-.d-none,
-.d-sm-none {
+.d-none{
   display: none;
 }
 
