--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -145,3 +145,8 @@ svg {
   color: var(--light-text);
   text-transform: capitalize;
 }
+
+
+input[type=checkbox] {
+  accent-color: var(--primary);
+}
