--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -43,7 +43,31 @@ body {
   --danger: #f62b2b;
   --success: #39b545;
   --background: #020514;
-  --text: #ccced2
+  --text: #ccced2;
+
+
+
+  --toggle-width: 3rem;
+    --toggle-height: 1.25rem;
+    --toggle-border: 0.125rem;
+    --toggle-font-size: 0.75rem;
+    --toggle-duration: 150ms;
+    --toggle-bg-on: var(--primary);
+    --toggle-bg-off: #e5e7eb;
+    --toggle-bg-on-disabled: #8dabd8;
+    --toggle-bg-off-disabled: #e5e7eb;
+    --toggle-border-on: #aeb1b0;
+    --toggle-border-off: #e5e7eb;
+    --toggle-border-on-disabled: #d1d5db;
+    --toggle-border-off-disabled: #e5e7eb;
+    --toggle-ring-width: 3px;
+    --toggle-ring-color: transparent;
+    --toggle-text-on: #ffffff;
+    --toggle-text-off: hsl(217, 19%, 27%);
+    --toggle-text-on-disabled: #9ca3af;
+    --toggle-text-off-disabled: #9ca3af;
+    --toggle-handle-enabled: #ffffff;
+    --toggle-handle-disabled: #f3f4f6;
 }
 
 h1,
