--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -187,6 +187,11 @@ svg {
   text-transform: capitalize;
 }
 
+.trim__text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 input[type=checkbox] {
   accent-color: var(--primary);
