--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -45,7 +45,7 @@ body {
   --text-color: #101010;
   --dark-text: #101010;
   --primary: #7714f1;
-  /* --primary: var(--default-dark); */
+  --primary: var(--default-dark);
   /* --primary: rgb(36, 170, 36); */
   --secondary: #707070;
   --tertiary: #7714f1;
