--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -8,6 +8,10 @@
   font-weight: normal;
 }
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* #app main, */
 /* #app .view :not() { */
 /* color: var(--text-color); */
