--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -23,9 +23,8 @@ body {
 
   /* transition: color 0.5s, background-color 0.5s; */
   /* line-height: 1.6; */
-  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  font-size: 15px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -101,13 +100,21 @@ h3,
 h4,
 h5,
 h6 {
-  /* font-family: 'Open Sans', sans-serif; */
-  font-family: 'Bakbak One', cursive;
+  font-weight: 700;
+  font-family: 'Comic Neue', cursive;
 }
 
+h1 {
+  font-size: 1.75rem;
+}
+
+.sub__hero__text {
+  line-height: 28px;
+  font-size: 1.02rem;
+}
 div,
 p {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 a {
@@ -169,13 +176,7 @@ svg {
   /* fill: #000; */
 }
 
-/* .show__mobile_menu{ */
-/* display: block; */
-/* } */
-/*  */
-/* .hide__mobile_menu{ */
-/* display: none; */
-/* } */
+
 
 .add-new-button {
   display: flex;
