--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -70,7 +70,7 @@ body {
   --toggle-border: 0.125rem;
   --toggle-font-size: 0.75rem;
   --toggle-duration: 150ms;
-  --toggle-bg-on:#ccc;
+  --toggle-bg-on: #ccc;
   --toggle-bg-off: #e5e7eb;
   --toggle-bg-on-disabled: #8dabd8;
   --toggle-bg-off-disabled: #e5e7eb;
@@ -106,7 +106,7 @@ h1 {
 }
 
 .sub__hero__text {
-  line-height: 20px!important;
+  line-height: 20px !important;
   font-size: 1.02rem;
 }
 
@@ -137,7 +137,7 @@ button {
 
 
 .d-none {
-  display: none!important;
+  display: none !important;
 }
 
 .uppercase {
@@ -194,6 +194,7 @@ svg {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  width:200px;
 }
 
 input[type=checkbox] {
@@ -204,4 +205,13 @@ input[type=checkbox] {
 .animate__animated.animate__fadeOut {
   --animate-duration: 300ms;
   --animate-delay: 10ms;
+}
+
+
+.fetching__data {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 30vh;
 }
