--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -194,7 +194,7 @@ svg {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  width:200px;
+  width: 200px;
 }
 
 input[type=checkbox] {
@@ -214,4 +214,48 @@ input[type=checkbox] {
   align-items: center;
   justify-content: center;
   min-height: 30vh;
+}
+
+
+/*note entry */
+.note__entry {
+  padding: 1rem;
+  border-radius: 5px;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid var(--border-color);
+  cursor: pointer;
+}
+
+.note__entry .note__entry__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.note__entry .note__entry__header h3 {
+  font-size: 1.2rem;
+  display: inline-block;
+  font-size: 18px;
+  line-height: 28px;
+  text-transform: capitalize;
+  width: 120px;
+}
+
+.note__entry .note__entry__content {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5rem;
+  color: var(--secondary);
+
+}
+
+.note__entry .note__entry__content p {
+  width: 200px;
+}
+
+
+.note__entry__header__date {
+  font-size: 0.8rem;
+  font-weight: 400;
+  color: var(--secondary);
 }
