--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,7 +1,4 @@
-@font-face {
-  font-family: Poppins;
-  src: url(/fonts/Poppins/Poppins-Black.ttf);
-}
+
 
 *,
 *::before,
@@ -11,6 +8,7 @@
   padding: 0;
   position: relative;
   font-weight: normal;
+  font-family: 'Open Sans', sans-serif;
 }
 
 
@@ -29,7 +27,7 @@ body {
 
   /* transition: color 0.5s, background-color 0.5s; */
   /* line-height: 1.6; */
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 16px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -111,9 +109,7 @@ h1 {
 }
 
 
-a {
-  font-family: 'Open Sans', sans-serif;
-}
+
 
 input,
 button {
@@ -233,7 +229,7 @@ input[type=checkbox] {
 }
 
 .note__entry .note__entry__header h3 {
-  font-size: 1.2rem;
+  font-size: 14.5px;
   display: inline-block;
   font-size: 18px;
   line-height: 28px;
@@ -242,15 +238,20 @@ input[type=checkbox] {
 }
 
 .note__entry .note__entry__content {
-  font-size: 1rem;
+  font-size: 13.5px;
   font-weight: 400;
   line-height: 1.5rem;
   color: var(--secondary);
+
 
 }
 
 .note__entry .note__entry__content p {
   width: 200px;
+  background-color: inherit!important;
+}
+.note__entry .note__entry__content p *{
+  background-color: inherit !important;
 }
 
 
@@ -259,3 +260,4 @@ input[type=checkbox] {
   font-weight: 400;
   color: var(--secondary);
 }
+/* authentication pages*/
