--- a/src/assets/quotes.css
+++ b/src/assets/quotes.css
@@ -45,8 +45,7 @@
 .quote {
     font-size: 110%;
     font-weight: 200;
-    /* font-family: quoterfont; */
-    font-family: "mulish";
+    /*  */
     text-align: center;
     font-weight: 400;
     margin-bottom: 1rem;
@@ -74,7 +73,7 @@
     text-align: center;
     display: block;
     font-size: 80%;
-    /* font-family: quoterfont; */
+    /*  */
     color: #6c757d;
 }
 
