--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -54,6 +54,7 @@ body {
   --dark-text: #101010;
   --primary: #7714f1;
   --primary: #4916b1;
+  /* --primary:#1e0e47; */
   --secondary: #707070;
   --tertiary: #7714f1;
   --warning: #fdca00;
