--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,5 +1,3 @@
-
-
 *,
 *::before,
 *::after {
@@ -37,12 +35,11 @@ body {
 
 :root {
   --background-color-primary: #ebebeb;
-    --background-color-secondary: #fafafa;
-    --accent-color: #cacaca;
-    --text-primary-color: #222;
-
-
+  --background-color-secondary: #fafafa;
+  --accent-color: #cacaca;
+  --text-primary-color: #222;
   --default: #101010;
+
   --white: #f5f5f5;
   --text-color: #ffffff;
   --border-color: #e5e5e5;
@@ -65,6 +62,7 @@ body {
   --background: #020514;
   --text: #ccced2;
 
+  --dark__mode__accent: #2d2d30;
 
 
   --toggle-width: 2.75rem;
@@ -94,7 +92,7 @@ body {
 /* Define styles for the root window with dark - mode preference */
 :root.dark-theme {
   --background-color-primary: #1e1e1e;
-  --background-color-secondary: #2d2d30;
+  --background-color-secondary: var(--dark__mode__accent);
   --accent-color: #3f3f3f;
   --text-primary-color: #ddd;
 }
@@ -259,9 +257,10 @@ input[type=checkbox] {
 
 .note__entry .note__entry__content p {
   width: 200px;
-  background-color: inherit!important;
+  background-color: inherit !important;
 }
-.note__entry .note__entry__content p *{
+
+.note__entry .note__entry__content p * {
   background-color: inherit !important;
 }
 
@@ -271,4 +270,86 @@ input[type=checkbox] {
   font-weight: 400;
   color: var(--secondary);
 }
+
 /* authentication pages*/
+
+.dark__mode {
+  background-color: var(--dark__mode__accent) !important;
+  color: #f5f5ff;
+}
+
+.dark__mode .form__control {
+  background-color: var(--dark__mode__accent);
+  color: #f5f5ff;
+}
+
+
+.dark__mode .form__control:focus {
+  background-color: var(--dark__mode__accent);
+  color: #f5f5ff;
+}
+
+.dark__mode input {
+  background-color: var(--dark__mode__accent);
+  color: #f5f5ff;
+}
+
+
+
+
+.dark__mode input,
+.dark__mode button,
+.dark__mode select,
+.dark__mode .card,
+.dark__mode .email__item,
+.dark__mode .d-sm-none {
+  background-color: var(--dark__mode__accent) !important;
+  color: #f5f5ff;
+  border-color: var(--secondary) !important;
+  color: var(--secondary) !important;
+}
+
+
+.dark__mode .list__item {
+  background-color: var(--dark__mode__accent) !important;
+  color: #f5f5ff;
+  border-left-color: unset;
+  color: var(--secondary) !important;
+}
+
+
+
+.dark__mode button {
+  color: #f5f5f5 !important;
+  background-color: var(--secondary) !important;
+}
+
+.dark__mode #nav__content,
+.dark__mode .link__item,
+.dark__mode .children__routes {
+  background-color: var(--dark__mode__accent) !important;
+  color: var(--secondary) !important;
+}
+
+nav.dark__mode {
+  background-color: rgba(255, 255, 255, .25) !important;
+}
+
+div#bottom__nav.dark__mode {
+  background-color: var(--dark__mode__accent) !important;
+  color: var(--secondary) !important;
+  display: none;
+}
+
+.dark__mode .list__item,
+.dark__mode .card,
+.dark__mode .email__item {
+  box-shadow: 1px 3px 12px -9px rgba(0, 0, 0, 0.9);
+  -webkit-box-shadow: 1px 3px 12px -9px rgba(0, 0, 0, 0.9);
+  -moz-box-shadow: 1px 3px 12px -9px rgba(0, 0, 0, 0.9);
+  /* border: .5px solid var(--secondary); */
+}
+
+.dark__mode .card {
+  border: 1px solid var(--secondary);
+}
